test/files/neg/t5389.scala

import ne.scala

class C
