test/files/neg/t5389.check
t5389.scala:2: error: not found: object ne
import ne.scala
       ^
one error found
